Fix Feign clients to use direct URLs instead of Eureka discovery